fix: [BND-400] Refactor import producer (#152)
Co-authored-by: dalilaacqua <dacquavi@emeal.nttdata.com>